load("@contrib_rules_jvm//java:defs.bzl", "java_library")

java_library(
    name = "protobuf-types",
    srcs = [
        "src/main/java/io/confluent/protobuf/type/utils/DecimalUtils.java",
    ],
    visibility = ["//visibility:public"],
    exports = [
        "//protobuf-types/src/main/proto:confluent_java_library",
        "//protobuf-types/src/main/proto/confluent/type:confluent_type_java_library",
    ],
    deps = [
        "//protobuf-types/src/main/proto:confluent_java_library",
        "//protobuf-types/src/main/proto/confluent/type:confluent_type_java_library",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
