package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "@io_confluent_assembly_plugin_boilerplate_resources//:unpacked",
        "@io_confluent_common_utils",
        "@org_apache_kafka_connect_api"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@junit_junit",
        "main_dependencies"
    ],
    runtime_deps = [
        "@io_confluent_assembly_plugin_boilerplate_resources//:unpacked",
        "@org_apache_kafka_connect_api//:linkable",
        "@org_apache_kafka_kafka_clients//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
